testdata/baselines/reference/submodule/conformance/nullishCoalescingOperatorInParameterBindingPattern.2(target=esnext).errors.txt
nullishCoalescingOperatorInParameterBindingPattern.2.ts(3,6): error TS2537: Type '{}' has no matching index signature for type 'string'.
nullishCoalescingOperatorInParameterBindingPattern.2.ts(6,6): error TS2537: Type '{ d?: string; }' has no matching index signature for type 'string'.


==== nullishCoalescingOperatorInParameterBindingPattern.2.ts (2 errors) ====
    // https://github.com/microsoft/TypeScript/issues/36295
    const a = (): string | undefined => undefined;
    (({ [a() ?? "d"]: c = "" }) => { var a; })();
         ~~~~~~~~~~
!!! error TS2537: Type '{}' has no matching index signature for type 'string'.
    
    const x = "";
    (({ [a() ?? "d"]: c = "", d = x }) => { var x; })();
         ~~~~~~~~~~
!!! error TS2537: Type '{ d?: string; }' has no matching index signature for type 'string'.